[package]
name = "spglib-sys"
version = "1.15.1"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Raw Rust bindings to spglib."
repository = "https://github.com/spglib/spglib-rs"
categories = ["external-ffi-bindings", "science"]

[lib]
name = "spglib_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "0.52.0"
